--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -100,3 +100,24 @@ div.recipeDisp {
     border-radius: 8px;
     box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
 }
+
+/*Banner*/
+.banner {
+    background-color: rgb(19,70,38);
+    display: flex;
+    height: 50px; 
+    font-size: 45px;
+    color: rgb(245,245,245);
+    text-align: left;
+    font-family: 'poppins-bold', sans-serif;
+    padding: 20px;
+}
+
+img {
+    height: 50px;
+}
+
+body {
+    margin: 0;
+}
+
