<Link> was causing the error.  currentUser should be up to date when logging in now.

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -59,7 +59,7 @@ input {
     text-decoration: none;
 }
 
-.loginBtn > button {
+.loginBtn {
     border: none;
     border-radius: 8px;
     background-color: rgba(18, 69, 38, 1);
