--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -67,6 +67,7 @@ input {
     color: white;
     margin: 12px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .createAcctBtn > button {
@@ -77,6 +78,7 @@ input {
     color: white;
     margin: 12px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 /*  */
@@ -92,7 +94,7 @@ div > .recipeCard {
 div.recipeDisp {
     height: 241px;
     width: 278px;
-    margin: 7px;
+    margin: 4px;
     box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
     border-radius: 8px 8px 0px 0px;
     display: flex;
@@ -146,16 +148,15 @@ div.recipeDisp {
 }
 
 .welcomeDiv {
-    margin-top: 10px;
     padding: 30px;
     text-align: left;
-    /* border: 1px solid black; */
 }
 
 .welcomeDiv > h3 {
     margin-top: 0;
     margin-bottom: 0;
 }
+
 /*Banner*/
 .banner {
     background-color: rgb(19,70,38);
@@ -192,11 +193,18 @@ body {
     background-position-y: 50%;
     background-size: 20px;
     padding: 10px;
+    margin: 20px;
 }
 
 /* Details Page */
 .detailswindow {
     display: flex;
+    fle
+}
+
+.detailswindow > .detail {
+    color: white;
+    margin: 10px;
 }
 
 .searchBoxDisplay {
@@ -241,4 +249,15 @@ body {
     border-radius: 8px;
     width: 278px;
     height: 413px;
+}
+
+.detailsBtns {
+    border: none;
+    border-radius: 8px;
+    background-color: rgba(18, 69, 38, 1);
+    padding: 14px;
+    color: white;
+    margin: 12px;
+    text-decoration: none;
+    cursor: pointer;
 }
