--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,4 +1,13 @@
 /*  */
+/* Font Styles */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@800&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+/*  */
 /* Login Styles */
 .loginContainer {
     display: flex;
@@ -48,33 +57,32 @@ input {
     padding: 10px;
 }
 
+/*  */
 /* Button styles */
-.signUpBtn {
+.createAccBtn {
+    font-family: 'Libre Franklin', sans-serif;
+    font-size: 17px;
     border: none;
     border-radius: 8px;
     background-color: rgba(18, 69, 38, 1);
-    padding: 14px;
-    color: white;
-    margin: 12px;
-    text-decoration: none;
-}
-
-.loginBtn {
-    border: none;
-    border-radius: 8px;
-    background-color: rgba(18, 69, 38, 1);
-    padding: 14px;
+    box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
+    width: 215px;
+    height: 54px;
     color: white;
     margin: 12px;
     text-decoration: none;
     cursor: pointer;
 }
 
-.createAcctBtn > button {
+.btns {
+    font-family: 'Libre Franklin', sans-serif;
+    font-size: 17px;
     border: none;
     border-radius: 8px;
     background-color: rgba(18, 69, 38, 1);
-    padding: 14px;
+    box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
+    width: 125px;
+    height: 44px;
     color: white;
     margin: 12px;
     text-decoration: none;
@@ -94,7 +102,6 @@ div > .recipeCard {
 div.recipeDisp {
     height: 241px;
     width: 278px;
-    margin: 4px;
     box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
     border-radius: 8px 8px 0px 0px;
     display: flex;
@@ -115,24 +122,11 @@ div.recipeDisp {
     align-self: flex-end;
 }
 
-.cardButton {
-    font-family: Arial, Helvetica, sans-serif;
-    width: 125px;
-    height: 44px;
-    color: white;
-    background-color: rgba(18, 69, 38, 1);
-    border: none;
-    border-radius: 8px;
-    box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
-}
-
-
+/*  */
 /* Dashboard Component */
-
 .dashBoard {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    row-gap: 20px;
     column-gap: 10px;
     margin-left: 5vw;
     margin-right: 10vw;
@@ -157,30 +151,31 @@ div.recipeDisp {
     margin-bottom: 0;
 }
 
-/*Banner*/
+/*  */
+/* Banner */
 .banner {
     background-color: rgb(19,70,38);
     display: flex;
     height: 50px; 
     font-size: 45px;
     color: rgb(245,245,245);
-    text-align: left;
     font-family: 'poppins-bold', sans-serif;
     padding: 20px;
 }
 
-img {
-    height: 50px;
-}
-
-.fas {
+.banner > .fa-utensils {
     margin-left: 9px;
 }
 
-body {
-    margin: 0;
+.fa-user-circle {
+    flex-direction: row;
+    justify-self: flex-end;
+    color: rgba(64, 171, 102, 1);
+    font-size: 60px;
+    cursor: pointer;
 }
 
+/*  */
 /* Search Component */
 .searchComp {
     text-align: center;
@@ -196,6 +191,7 @@ body {
     margin: 20px;
 }
 
+/*  */
 /* Details Page */
 .detailswindow {
     display: flex;
@@ -203,60 +199,48 @@ body {
 
 .detailswindow > .detail {
     color: white;
-    margin: 10px;
+    /* margin: 8px; */
+    box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    background-color: rgb(19,70,38);
 }
 
 .searchBoxDisplay {
-    background-color: rgb(19,70,38);
-    border-radius: 8px;
-    color: white;
     width: 379px;
     height: 241px;
-    /* margin: 20px; */
 }
 
 .ingredientsDisplay {
-    background-color: rgb(19,70,38);
-    border-radius: 8px;
     width: 379px;
     height: 306px;
+    padding: 20px;
+
 }
 
 .instructionsDisplay {
-    background-color: rgb(19,70,38);
-    border-radius: 8px;
     width: 479px;
     height: 413px;
+    padding: 20px;
+
 }
 
 .servingsDisplay {
-    background-color: rgb(19,70,38);
-    border-radius: 8px;
     width: 232px;
     height: 122px;
+    padding: 20px;
+    
 }
 
 .readyTimeDisplay {
-    background-color: rgb(19,70,38);
-    border-radius: 8px;
     width: 232px;
     height: 122px;
+    padding: 20px;
+
 }
 
 .healthRatingDisplay {
-    background-color: rgb(19,70,38);
-    border-radius: 8px;
     width: 278px;
     height: 413px;
-}
+    padding: 20px;
 
-.detailsBtns {
-    border: none;
-    border-radius: 8px;
-    background-color: rgba(18, 69, 38, 1);
-    padding: 14px;
-    color: white;
-    margin: 12px;
-    text-decoration: none;
-    cursor: pointer;
 }
