--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -188,7 +188,7 @@ div.recipeDisp {
     background-position-y: 50%;
     background-size: 20px;
     padding: 10px;
-    margin: 20px;
+    margin-top: 20px;
 }
 
 /*  */
