styled some things on dash so everything fits.

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -131,9 +131,8 @@ div.recipeDisp {
     margin-left: 5vw;
     margin-right: 10vw;
 }
-
 .dashBoardCard {
-
+    margin-top: -10px;
 }
 
 .dashBoardCard > h3 {
